<resources>
    <string name="app_name">Dijkstra\'s Path</string>
    <string name="welcome_screen_app_name">Dijkstra s Path</string>
    <string name="user_id_or_email_prompt">Email Address</string>
    <string name="password_prompt">Password</string>
    <string name="invalid_credentials_message">This login attempt is invalid. Please enter a valid email and password.</string>
    <string name="login_button_text">Login</string>
    <string name="guest_button_text">Proceed as Guest</string>
    <string name="low_poly_triangle_background_desc">A low poly blue triangle background</string>
    <string name="welcome_screen_title">Welcome To</string>
    <string name="welcome_screen_register_text">Register</string>
    <string name="location_marker_desc">A location marker used in our title</string>
    <string name="user_id_prompt">Please enter a valid email address</string>
    <string name="valid_email_prompt">Must enter a valid email address.</string>
    <string name="valid_password_prompt">Please enter a password</string>
    <string name="registration_name_prompt">Please enter your full name</string>
    <string name="password_error_message">Password must be at least 8 characters long and contain both letters and numbers.</string>
    <string name="name_error_message">Please enter a first and last name.</string>
    <string name="logout_text">Logout</string>
    <string name="hello_user">Hello user!</string>
    <string name="title_activity_detailed_info">DetailedInfo</string>
    <string name="back_text">Back</string>
    <string name="search_name_prompt">Search By Name :</string>
    <string name="search_gender_prompt">Gender Restriction :</string>
    <string name="search_male_box">Male</string>
    <string name="search_female_box">Female</string>
    <string name="search_age_range_prompt">Age Restrictions :</string>
    <string name="search_families_newborns_box">Families with Newborns</string>
    <string name="search_children_box">Children</string>
    <string name="search_young_adults_box">Young Adults</string>
    <string name="search_anyone_box">Anyone</string>
    <string name="shelter_list_clear_search">Clear\nSearch</string>
    <string name="detailed_info_reserve">Reserve A Spot</string>
    <string name="detail_shelter_name">No Shelter Name</string>
    <string name="detail_shelter_capacity">Shelter Capacity N/A</string>
    <string name="detail_restrictions">No Restrictions</string>
    <string name="detail_longitude">No Longitude</string>
    <string name="detail_latitude">No Latitude</string>
    <string name="detail_address">No Address Supplied</string>
    <string name="detail_special_notes">No Special Notes Given</string>
    <string name="reserve_title">Reservation Form</string>
    <string name="reserve_number_prompt">Reserving a bed for :</string>
    <string name="reserve_person_count">Person</string>
    <string name="reserve_confirm">Confirm Reservation</string>
    <string name="shelter_list_cancel">Cancel\nReservation</string>
</resources>
